--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         </div>
 
         <div class="control">
-          <button id="exportPng" type="button">Export PNG</button>
+          <button id="exportRun" type="button">Export PNG</button>
+          <button id="recordMp4" type="button">Record MP4 (5s)</button>
         </div>
       </section>
 
@@ -47,6 +48,8 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/p5.min.js"></script>
+    <script src="./src/params.js"></script>
+    <script src="./src/export-manager.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
