--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div id="canvasWrap" aria-label="Canvas"></div>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.11.10/lib/p5.min.js"></script>
+    <script src="./libs/p5.min.js"></script>
     <script src="./src/params.js"></script>
     <script src="./src/export-manager.js"></script>
     <script src="sketch.js"></script>
