--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
   <body>
     <main>
       <section id="controls">
-        <!-- KNOPPEN -->
-        <button id="randomize" class="control">randomize</button>
-        <button id="reset" class="control">reset</button>
-
         <!-- KLEUR SELECTOR -->
         <div class="control">
           <label for="bg">background</label>
@@ -36,8 +32,14 @@
           />
         </div>
 
+        <!-- KNOPPEN -->
+        <div class="control control-row">
+          <button id="randomize">randomize</button>
+          <button id="reset">reset</button>
+        </div>
+
         <!-- KEYFRAMES -->
-        <div class="control">
+        <div class="control control-section">
           <button id="addKeyframe">add keyframe</button>
           <button id="removeKeyframe">remove keyframe</button>
         </div>
