lib lokaal gedownload

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
     </main>
 
     <script src="./libs/p5.min.js"></script>
-    <script src="https://unpkg.com/p5.js-svg@1.6.0"></script>
+    <script src="./libs/p5.svg.js"></script>
+    
     <script src="./src/params.js"></script>
     <script src="./src/transition-manager.js"></script>
     <script src="./src/export-manager.js"></script>
