--- a/index.html
+++ b/index.html
@@ -12,21 +12,25 @@
         <!-- KLEUR SELECTOR -->
         <div class="control">
           <label for="bg">background</label>
-          <input id="bg" type="color" value="#000000" />
+          <input id="bg" type="color" value="#ffffff" />
         </div>
         <div class="control">
           <label for="fg">foreground</label>
-          <input id="fg" type="color" value="#ffffff" />
+          <input id="fg" type="color" value="#663366" />
         </div>
 
         <!-- SLIDERS -->
         <div class="control">
           <label for="sizeX">sizeX</label>
-          <input id="sizeX" type="range" min="0" max="1000" step="1" value="100"/>
+          <input id="sizeX" type="range" min="0" max="2000" step="1" value="300"/>
         </div>
         <div class="control">
-          <label for="sizeY">sizeY</label>
-          <input id="sizeY" type="range" min="0" max="1000" step="1" value="100"/>
+          <label for="space">space</label>
+          <input id="space" type="range" min="0" max="1000" step="1" value="0"/>
+        </div>
+        <div class="control">
+          <label for="sizeMultiplier">sizeMult</label>
+          <input id="sizeMultiplier" type="range" min="0" max="10" step="0.01" value="1"/>
         </div>
 
         <!-- KNOPPEN -->
@@ -50,7 +54,7 @@
         <!-- EXPORT -->
         <div class="control">
           <button id="exportPng" onclick="saveCanvas('export.png')">export PNG</button>
-          <button id="recordMp4">record MP4 (5s)</button>
+          <button id="recordMp4">record MP4</button>
           <button id="exportSvg" type="button" onclick="save('export.svg')">export SVG</button>
         </div>
       </section>
