--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Template project - Fontys</title>
+    <title>Template project</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,21 +16,17 @@
         </div>
         <div class="control">
           <label for="fg">foreground</label>
-          <input id="fg" type="color" value="#663366" />
+          <input id="fg" type="color" value="#000000" />
         </div>
 
         <!-- SLIDERS -->
         <div class="control">
           <label for="sizeX">sizeX</label>
-          <input id="sizeX" type="range" min="0" max="2000" step="1" value="400"/>
+          <input id="sizeX" type="range" min="0" max="2000" step="1" value="200"/>
         </div>
         <div class="control">
-          <label for="space">space</label>
-          <input id="space" type="range" min="0" max="1000" step="1" value="0"/>
-        </div>
-        <div class="control">
-          <label for="sizeMultiplier">sizeMult</label>
-          <input id="sizeMultiplier" type="range" min="0" max="10" step="0.01" value="1"/>
+          <label for="sizeY">sizeY</label>
+          <input id="sizeY" type="range" min="0" max="2000" step="1" value="200"/>
         </div>
 
         <!-- KNOPPEN -->
